deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-docker-app-deployment
  labels:
    app: ruby-docker-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ruby-docker-app
  template:
    metadata:
      labels:
        app: ruby-docker-app
    spec:
      containers:
      - name: ruby-docker-app
        image: 219445987607.dkr.ecr.us-east-1.amazonaws.com/ruby-docker-app:latest
        ports:
        - containerPort: 3000
