service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 31079
  type: NodePort
  selector:
    app: ruby-docker-app
